force-app/main/default/objects/Project__c/fields/Is_My_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_My_Project__c</fullName>
    <formula>Project_Manager__c = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is My Project</label>
    <type>Checkbox</type>
</CustomField>