force-app/main/default/objects/Project__c/validationRules/VR_BudgetForFixPrice.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_BudgetForFixPrice</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Type__c, &apos;Fixprice&apos;),
 OR (ISBLANK(Budget__c),Budget__c = null, Budget__c&lt;=0)
)</errorConditionFormula>
    <errorDisplayField>Budget__c</errorDisplayField>
    <errorMessage>Budget must be defined fot the Fixprice projects</errorMessage>
</ValidationRule>