force-app/main/default/objects/Project__c/validationRules/VR_Project_CantCompleteWithoutEndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Project_CantCompleteWithoutEndDate</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISPICKVAL(Status__c,&apos;Completed&apos;),
 ISBLANK(End_Date__c )
)</errorConditionFormula>
    <errorDisplayField>End_Date__c</errorDisplayField>
    <errorMessage>End date must be defined to complete the Project</errorMessage>
</ValidationRule>