force-app/main/default/objects/Project__c/listViews/LST_My_Active_Projects.listView-meta.xml
<ListView>
    <fullName>LST_My_Active_Projects</fullName>
    <columns>NAME</columns>
    <columns>Project_Name__c</columns>
    <columns>Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Status__c</columns>
    <columns>AccountId__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_My_Project__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Active Projects</label>
</ListView>